<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#63673D">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/Inkhungdangnhap"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/dangnhap"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"></TextView>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignRight="@+id/Inkhungdangnhap"
        android:layout_marginTop="30dp"
        android:src="@drawable/logodangnhap"></ImageView>
    <LinearLayout
        android:id="@+id/Inkhungdangnhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <EditText
            android:id="@+id/edtenDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tendangnhap"
            android:drawableLeft="@drawable/user"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:background="@color/white"
            android:drawablePadding="10dp"
            android:textColorHint="@color/gray"
            android:singleLine="true">
        </EditText>
        <EditText
            android:id="@+id/edmatkhauDN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/matkhau"
            android:drawableLeft="@drawable/password"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:background="@color/white"
            android:drawablePadding="10dp"
            android:textColorHint="@color/gray"
            android:singleLine="true"
            android:password="true">
        </EditText>
        <Button
            android:id="@+id/btnDongyDN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dongy"
            android:padding="10dp"
            android:backgroundTint="#BC1A1A"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">
        </Button>
        <Button
            android:id="@+id/btnDangkydn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dangky"
            android:padding="10dp"
            android:backgroundTint="@color/teal_700"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">

        </Button>
    </LinearLayout>
</RelativeLayout>